bk_ida/gobmkida/g2/edge_closing_backfill
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/edge_closing_backfill/src/engine/reading.c:4076:6: error: use of undeclared identifier 'dword_76BCFC'
v5 = dword_76BCFC[v4]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/edge_closing_backfill/src/obj/1/reading.o] Error 1
